# rp2040-si7021

./: README.md
driver/: CMakeLists.txt  si7021.cpp
driver/include/: si7021.h
example/: CMakeLists.txt  main.cpp
